about page with section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <header>
     <ul type="none">
       <li routerLink="">Home</li>
-      <li routerLink="">About</li>
+      <li routerLink="/about">About</li>
       <li routerLink="/login">SignUp</li>
     </ul>
     <aside>
