--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,28 +1,28 @@
 <section>
   <div>
-    <form name="#signUpForm">
+    <form #signUpForm="ngForm">
       <div>
         <label>Firts Name :</label>
-        <input type="text" name="fname" placeholder="Enter First name">
+        <input type="text" name="fname" [(ngModel)]="firtsName" placeholder="Enter First name">
       </div>
       <div>
         <label>Last Name :</label>
-        <input type="text" name="lname" placeholder="Enter Last name">
+        <input type="text" name="lname" [(ngModel)]="lastName" placeholder="Enter Last name">
       </div>
       <div>
         <label>Email :</label>
-        <input type="email" name="email" placeholder="Enter email Id">
+        <input type="email" name="email" [(ngModel)]="email" placeholder="Enter email Id">
       </div>
       <div>
         <label>DOB :</label>
-        <input type="date" name="date" placeholder="selact date">
+        <input type="date" name="date" [(ngModel)]="dateOfBirth" placeholder="selact date">
       </div>
       <div>
         <label>Password :</label>
-        <input type="password" name="pwd" placeholder="Enter Password">
+        <input type="password" name="pwd" [(ngModel)]="pswd" placeholder="Enter Password">
       </div>
       <div class="btn_change">
-        <button type="button">SignUp</button>
+        <button type="button" (click)="signUp()">SignUp</button>
       </div>
 
     </form>
