using shared common code

--- a/src/app/about2/about2.component.html
+++ b/src/app/about2/about2.component.html
@@ -10,16 +10,25 @@
     a domain focused technically specified resourcing services.
   </article>
   <div class="icon">
-    <mat-icon class="material-icons">home</mat-icon>
-    <mat-icon class="material-icons">build</mat-icon>
-    <mat-icon class="material-icons">account_circle</mat-icon>
-    <mat-icon class="material-icons">public</mat-icon>
-    <mat-icon class="material-icons">find_in_page</mat-icon>
-  </div>
-  <div class="icon_below">
-    <h4>Home</h4>
-    <h4>Public</h4>
-    <h4>Utility</h4>
-    <h4>Search</h4>
+    <div class="iconlist">
+      <mat-icon class="material-icons">home</mat-icon>
+      <h4>Home</h4>
+    </div>
+    <div class="iconlist">
+      <mat-icon class="material-icons">build</mat-icon>
+      <h4>Public</h4>
+    </div>
+    <div class="iconlist">
+      <mat-icon class="material-icons">account_circle</mat-icon>
+      <h4>Utility</h4>
+    </div>
+    <div class="iconlist">
+      <mat-icon class="material-icons">public</mat-icon>
+      <h4>Search</h4>
+    </div>
+    <div class="iconlist">
+      <mat-icon class="material-icons">find_in_page</mat-icon>
+      <h4>Any</h4>
+    </div>
   </div>
 </section>
