--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,6 +5,7 @@
       <li routerLink="">Home</li>
       <li routerLink="/about">About</li>
       <li routerLink="/login">SignUp</li>
+      <li routerLink="/languages">Languages</li>
     </ul>
     <aside>
       <img src="../../assets/my_icon.png" height="80" width="100"/>
